# azucar

./: .anjuta_sym_db.db  AUTHORS  CNAME  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  azucar.py  config.h  config.status  configure  configure.ac  index.html
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: azucar.ui  config.ui  cover.ui  music.lst  player.ui
src/: Makefile  Makefile.am  Makefile.in  albums.py  azucar.py  azucar.py~  config.py  cover.py  cover.py~  engine.py~  player.py  player.py~  scrobble.py
